<resources>
    <!-- Page titles -->
    <string name="app_name">ProxiFood</string>
    <string name="title_home">Mes offers</string>
    <string name="title_dashboard">Search</string>
    <string name="title_notifications">My account</string>

    <!-- Common messages -->
    <string name="error_field_required">This field is required</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_server">An error occurred. Please try again later.</string>
    <string name="delete">Delete</string>
    <string name="contact">Contact</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="or"> or </string>
    <string name="refuse">Refuse</string>

    <!-- Strings related to login -->
    <string name="prompt_login">Login</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="authenticating_loader">Authenticating...</string>
    <string name="no_account_link">No account yet? Create one</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name ="error_invalid_credentials">Invalid credentials</string>

    <!-- Strings related to sign up -->
    <string name="prompt_email">Email</string>
    <string name="error_invalid_login">Login must have at least 3 characters</string>
    <string name="error_invalid_password">Password must have at least 6 characters</string>
    <string name="prompt_select">Select</string>
    <string name="create_account">Create account</string>
    <string name="already_member">Already a member? Login</string>
    <string name="login_already_used">Login not available</string>
    <string name="email_already_used">Email already used</string>


    <!-- Strings related to logout -->
    <string name="disconnect">Logout</string>
    <string name="processing_logout">Logging out...</string>
    <string name="successful_logout">Successful log out</string>


    <!-- Strings related to user profile -->
    <string name="contact_user">Contact user</string>
    <string name="saving_profile">Saving profile...</string>
    <string name="loading_profile">Loading profile...</string>


    <!-- Strings related to view meals -->
    <string name="processing_get_posts">Getting posts...</string>

    <!-- Strings related to post new meal -->
    <string-array name="meal_nb_participants">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5+</item>
    </string-array>
    <string name="cook_together">Allow guests to cook with me</string>
    <string name="cook_with_host">Cook with my host</string>
    <string name="error_date_before">The end of inscription must precede the meal date</string>
    <string name="processing_post">Posting...</string>

    <!-- Strings related to edit meal -->
    <string name="participants"> participants.</string>

    <!-- Strings related to book meal -->
    <string name="processing_book">Booking...</string>
    <string name="contact_host">Contact the host</string>
    <string name="book">Book</string>

    <!-- Input hints -->
    <string name="hint_login">Login</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_firstname">Firstname</string>
    <string name="hint_name">Name</string>
    <string name="hint_birthday">Date of birth</string>
    <string name="hint_describe_yourself">Describe yourself</string>
    <string name="hint_street_number">Street number</string>
    <string name="hint_street">Street</string>
    <string name="hint_zipcode">Zipcode</string>
    <string name="hint_city">City</string>
    <string name="hint_complementary_info">Complementary information</string>
    <string name="hint_search_city">Search a city</string>

    <string name="hint_host">Host</string>
    <string name="hint_meal_name">Meal name</string>
    <string name="hint_meal_description">Meal description</string>
    <string name="hint_meal_nb_participants">Number of participants</string>
    <string name="hint_meal_price">Meal price (€)</string>
    <string name="hint_meal_end_of_inscription">End of inscription</string>
    <string name="hint_meal_date">Meal date</string>


    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="title_activity_signup">SignupActivity</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="action_settings">Settings</string>
    <string name="view_my_profile">View my profile</string>
    <string name="view_profile">View the profile</string>
    <string name="edit_my_profile">Edit my profile</string>

    <string name="booking_history">My booking history</string>
    <string name="my_reviews">My reviews</string>

    <!-- Page titles -->
    <string name="title_account">My account</string>
    <string name="title_research">Search a meal</string>
    <string name="title_edit_profile">Edit my profile</string>
    <string name="title_update_address">Update my address</string>
    <string name="processing_delete_account">Deleting account...</string>
    <string name="delete_account">Delete my account</string>
    <string name="title_post">Create a post</string>
    <string name="title_edit_post">Edit a post</string>
    <string name="title_view_post">View the post</string>
    <string name="title_book">Book</string>
    <string name="title_accepted_participants">Accepted participants</string>
    <string name="title_bookings">Manage my bookings</string>
    <string name="title_invitations">Manage my invitations</string>

    <!-- Tab titles -->
    <string name="tab_invitations">My invitations</string>
    <string name="tab_bookings">My bookings</string>
    <string name="tab_edit_post">Information</string>
    <string name="tab_participants">Participants</string>


    <!-- Tabs titles -->
    <string name="tab_profile">Profile</string>
    <string name="tab_comments">Comments</string>
    <string name="tab_offered_meals">Offered meals</string>


    <!-- Alerts -->
    <string name="delete_account_confirmation">Are you sure you want to delete your account?</string>
    <string name="delete_post_confirmation">Are you sure you want to delete this post?</string>
    <string name="contact_user_confirmation">Are you sure you want to contact this user?</string>
    <string name="accept_refuse_option">Do you want to accept or refuse the booking?</string>
    <string name="delete_confirm_button">Confirm deletion</string>

    <!-- Toasts -->
    <string name="successful_account_deletion">Your account has been successfully deleted.</string>
    <string name="successful_post_deletion">Your post has been successfully deleted.</string>
    <string name="successful_message_sent">Your message has been successfully sent.</string>
    <string name="successful_booking_acceptance">The booking has been successfully accepted.</string>
    <string name="successful_booking_refusal">The booking has been successfully refused.</string>

    <!-- Information Messages -->
    <string name="info_street_number">Your street number will be send to your guests only after booking confirmation.</string>
    <string name="info_add_address">Your address is required if you want to become a host.</string>

    <string name="default_user_description">This user hasn\'t written a description yet.</string>
    <string name="default_comments_text">This user hasn\'t been reviewed yet.</string>
    <string name="default_offers_text">This user doesn\'t offer any meal yet.</string>
    <string name="default_address_text">Address not specified</string>
    <string name="default_invitations_text">You have offered any meal yet.</string>

</resources>
