<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="24dp"
    android:paddingRight="24dp"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Host Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_host"
                android:inputType="textCapWords"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black"/>
        </android.support.design.widget.TextInputLayout>

        <!-- Meal Label -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:layout_weight="1">

            <EditText
                android:id="@+id/input_meal_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_meal_name"
                android:inputType="textCapWords"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <!-- Meal Description -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/input_meal_description"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:ems="10"
                android:hint="@string/hint_meal_description"
                android:inputType="textMultiLine"
                android:background="@android:color/transparent"
                android:textColor="@android:color/black" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- Meal Price -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_meal_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/hint_meal_price"
                    android:inputType="numberDecimal"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <!-- Meal Number of Participants -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <Spinner
                    android:id="@+id/spinner_meal_nb_participants"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/hint_meal_nb_participants" />

            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">

            <!-- Meal Date -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_meal_date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_meal_date"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

            <!-- Meal End of Inscription -->
            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1">

                <EditText
                    android:id="@+id/input_meal_end_of_inscription"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/hint_meal_end_of_inscription"
                    android:inputType="text"
                    android:background="@android:color/transparent"
                    android:textColor="@android:color/black" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <!-- Meal Cook with Guests -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:id="@+id/switch_cook_together_layout">

            <Switch
                android:id="@+id/switch_cook_together"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cook_with_host" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_contact_host"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/contact_host" />

            <Button
                android:id="@+id/button_book"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/book" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>

